--- a/framework/admin/Directory.Build.props
+++ b/framework/admin/Directory.Build.props
@@ -1,17 +1,7 @@
 <Project>
+	<Import Project="$(SolutionDir)\Directory.Build.props" />
 	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<TargetFrameworks>net6.0;net8.0;</TargetFrameworks>
-		<Version>4.0.0.5</Version>
-		<LangVersion>latest</LangVersion>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Authors>Diego</Authors>
-		<Product>ThingsGateway</Product>
-		<Copyright>© 2023-present Diego</Copyright>
-		<RepositoryUrl>https://gitee.com/diego2098/ThingsGateway</RepositoryUrl>
-		<SignAssembly>True</SignAssembly>
-		<DelaySign>False</DelaySign>
-		<SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
+
 	</PropertyGroup>
 
 
