--- a/framework/web/ThingsGateway.Web.Entry/Properties/launchSettings.json
+++ b/framework/web/ThingsGateway.Web.Entry/Properties/launchSettings.json
@@ -1,4 +1,12 @@
 {
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:42421",
+      "sslPort": 44310
+    }
+  },
   "profiles": {
     "Kestrel": {
       "commandName": "Project",
@@ -8,6 +16,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:7200;https://localhost:7201"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
