更新demo;更新kafka 生成事件;

--- a/framework/admin/ThingsGateway.Admin.Blazor/ThingsGateway.Admin.Blazor.csproj
+++ b/framework/admin/ThingsGateway.Admin.Blazor/ThingsGateway.Admin.Blazor.csproj
@@ -3,6 +3,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0" />
+		<PackageReference Include="Masa.Blazor.SomethingSkia" Version="1.2.2" />
 	</ItemGroup>
 
 
