--- a/framework/admin/ThingsGateway.Admin.Core/ThingsGateway.Admin.Core.csproj
+++ b/framework/admin/ThingsGateway.Admin.Core/ThingsGateway.Admin.Core.csproj
@@ -5,6 +5,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Furion.Pure" Version="4.9.1.8" />
+		<PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.9.1.8" />
 		<PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.9.1.8" />
 		<PackageReference Include="SqlSugarCore" Version="5.1.4.122" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
