--- a/framework/admin/ThingsGateway.Core/ThingsGateway.Core.csproj
+++ b/framework/admin/ThingsGateway.Core/ThingsGateway.Core.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-		<PackageReference Include="Furion.Pure" Version="4.9.1.8" />
-		<PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.9.1.8" />
+
+		<PackageReference Include="Mapster" Version="7.4.0" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
