--- a/framework/Directory.Build.props
+++ b/framework/Directory.Build.props
@@ -9,12 +9,11 @@
 		<Product>ThingsGateway</Product>
 		<Copyright>© 2023-present Diego</Copyright>
 		<RepositoryUrl>https://gitee.com/diego2098/ThingsGateway</RepositoryUrl>
-		<SignAssembly>True</SignAssembly>
+		<SignAssembly>False</SignAssembly>
 		<DelaySign>False</DelaySign>
 		<SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 	</PropertyGroup>
-
 
 
 </Project>
