--- a/src/ThingsGateway.Web.Entry/appsettings.json
+++ b/src/ThingsGateway.Web.Entry/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConfigurationScanDirectories": [ "Config" ],
 
-  "Urls": "http://0.0.0.0:7200" //监听地址
+  "Urls": "http://0.0.0.0:7200", //监听地址
 }
