--- a/src/foundation/ThingsGateway.Foundation.AdapterConsle/src/ThingsGateway.Foundation.AdapterConsle.csproj
+++ b/src/foundation/ThingsGateway.Foundation.AdapterConsle/src/ThingsGateway.Foundation.AdapterConsle.csproj
@@ -7,7 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\ThingsGateway.Foundation.Modbus\src\ThingsGateway.Foundation.Modbus.csproj" >
+		<ProjectReference Include="..\..\ThingsGateway.Foundation.Dlt645\src\ThingsGateway.Foundation.Dlt645.csproj" />
+		<ProjectReference Include="..\..\ThingsGateway.Foundation.Modbus\src\ThingsGateway.Foundation.Modbus.csproj">
 		</ProjectReference>
 	</ItemGroup>
 
