--- a/src/ThingsGateway.Admin.Core/ThingsGateway.Admin.Core.csproj
+++ b/src/ThingsGateway.Admin.Core/ThingsGateway.Admin.Core.csproj
@@ -2,11 +2,19 @@
 
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.4.0" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.1" />
+		<PackageReference Include="MySqlConnector" Version="2.3.5" />
+		<PackageReference Include="Npgsql" Version="8.0.1" />
+		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.130" />
 		<PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
 		<PackageReference Include="SharpZipLib" Version="1.4.2" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.122" />
+		<PackageReference Include="SqlSugarCore.Dm" Version="1.3.0" />
+		<PackageReference Include="SqlSugarCore.Kdbndp" Version="7.4.0" />
+		<PackageReference Include="SqlSugarCoreNoDrive" Version="5.1.4.137" />
+		<PackageReference Include="System.Data.Common" Version="4.3.0" />
+		<PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
