--- a/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
+++ b/src/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
@@ -7,6 +7,12 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <None Update="Config\Demo.Production.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Config\Demo.Development.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	  <None Update="Config\Job.Development.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
