--- a/src/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/src/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -18,7 +18,7 @@
 		<OutputPath>$(SolutionDir)bin\$(Configuration)\$(MSBuildProjectName)\</OutputPath>
 		<SatelliteResourceLanguages>zh-Hans;en-US</SatelliteResourceLanguages>
 		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
-		<PublishReadyToRun>true</PublishReadyToRun>
+		<!--<PublishReadyToRun>true</PublishReadyToRun>-->
 		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 		<!--<PlatformTarget>x86</PlatformTarget>-->
 	</PropertyGroup>
