--- a/src/foundation/ThingsGateway.Foundation.SourceGenerator/src/ThingsGateway.Foundation.SourceGenerator.csproj
+++ b/src/foundation/ThingsGateway.Foundation.SourceGenerator/src/ThingsGateway.Foundation.SourceGenerator.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="$(SolutionDir)Foundation.props" />
 
 	<PropertyGroup>
-		<Description>工业设备通讯协议-源生成器</Description>
 		<TargetFrameworks>netstandard2.0;</TargetFrameworks>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 		<NoPackageAnalysis>true</NoPackageAnalysis>
+		<SignAssembly>false</SignAssembly>
 	</PropertyGroup>
-
 
 	<ItemGroup>
 	  <None Include="..\..\..\.editorconfig" Link=".editorconfig" />
@@ -16,7 +14,4 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
 	</ItemGroup>
-	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
-		<DebugType></DebugType>
-	</PropertyGroup>
 </Project>
