--- a/src/foundation/ThingsGateway.Foundation/src/ThingsGateway.Foundation.csproj
+++ b/src/foundation/ThingsGateway.Foundation/src/ThingsGateway.Foundation.csproj
@@ -11,9 +11,9 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="NewLife.Core" Version="10.7.2024.202" />
+		<PackageReference Include="NewLife.Core" Version="10.8.2024.303" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="TouchSocket" Version="2.0.0-beta.279" />
+		<PackageReference Include="TouchSocket" Version="2.0.0-rc.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'!='net45'">
