发布构建时，默认删除PDB文件

--- a/src/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/src/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -4,13 +4,25 @@
 		<Exec Command=" 
 		set dir=&quot;$(SolutionDir)bin\$(Configuration)\ThingsGateway.Web.Entry\$(TargetFramework)\Plugins&quot;&#xD;&#xA; 
 		if not exist %dir%  md %dir%  &#xD;&#xA;
-		set dir1=&quot;$(PublishDir)Plugins&quot;&#xD;&#xA; 
+			set dir1=&quot;$(PublishDir)Plugins&quot;&#xD;&#xA; 
 		if not exist %dir1%  md %dir1%  &#xD;&#xA;
-		
-			  xcopy %dir% %dir1% /E /H /C /K /Y  &#xD;&#xA;&#xD;&#xA;" />
-
+			xcopy %dir% %dir1% /E /H /C /K /Y  &#xD;&#xA;&#xD;&#xA;" />
 			
 	</Target>
+	
+	<Target Name="PostPublish" AfterTargets="Publish">
+		<ItemGroup>
+			<PDBFilesToDelete Include="$(PublishDir)\*.pdb"/>
+		</ItemGroup>
+		<Delete Files="@(PDBFilesToDelete)" />
+	</Target>
+	
+	<!--<Target Name="RemoveTranslationsAfterBuild" AfterTargets="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
+		<ItemGroup>
+			<PDBFilesToDelete Include="$(TargetDir)\*.pdb"/>
+		</ItemGroup>
+		<Delete Files="@(PDBFilesToDelete)" />
+	</Target>-->
 	
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
