添加任务最大数量限制

--- a/src/ThingsGateway.Server/appsettings.json
+++ b/src/ThingsGateway.Server/appsettings.json
@@ -6,7 +6,8 @@
     "DaysAgo": 3 //保留3天数据
   },
   "ChannelThread": {
-    "CycleInterval": 10 //最小循环间隔
+    "CycleInterval": 10, //最小循环间隔
+    "MaxCount": 1000 //最大通道数量(每个通道为一个循环任务)
   },
 
   "Logging": {
