--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -15,6 +15,9 @@
 		<SatelliteResourceLanguages>zh-Hans;en-US</SatelliteResourceLanguages>
 		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
 		<ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
+
+		<GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode><!--动态适用GC-->
+		<!--<UseWindowsThreadPool>false</UseWindowsThreadPool> --><!--使用自托管线程池-->
 		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 		<!--<PlatformTarget>x86</PlatformTarget>-->
 
