--- a/src/adapter/ThingsGateway.Foundation.OpcUa/ThingsGateway.Foundation.OpcUa.csproj
+++ b/src/adapter/ThingsGateway.Foundation.OpcUa/ThingsGateway.Foundation.OpcUa.csproj
@@ -11,20 +11,16 @@
 	<PropertyGroup>
 		<Description>工业设备通讯协议-OpcUa协议</Description>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
-	  <None Remove="Locales\en-US.json" />
-	  <None Remove="Locales\zh-CN.json" />
+		<Content Remove="Locales\*.json" />
+		<EmbeddedResource Include="Locales\*.json" />
 	</ItemGroup>
-	
-	<ItemGroup>
-	  <EmbeddedResource Include="Locales\en-US.json" />
-	  <EmbeddedResource Include="Locales\zh-CN.json" />
-	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client" Version="1.5.374.27" />
-		<PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client.ComplexTypes" Version="1.5.374.27" />
+		<PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client" Version="1.5.374.36" />
+		<PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client.ComplexTypes" Version="1.5.374.36" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\ThingsGateway.Foundation\ThingsGateway.Foundation.csproj" />
