--- a/src/adapter/ThingsGateway.Plugin.OpcDa/ThingsGateway.Plugin.OpcDa.csproj
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/ThingsGateway.Plugin.OpcDa.csproj
@@ -7,29 +7,22 @@
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 
-		<Exec Command="@echo off&#xD;&#xA;setlocal enabledelayedexpansion&#xD;&#xA;&#xD;&#xA;set &quot;targetFWS=net6.0 net7.0 net8.0&quot;&#xD;&#xA;for %25%25f in (%25targetFWS%25) do (&#xD;&#xA;    set &quot;dir=$(SolutionDir)bin\$(Configuration)\ThingsGateway.Web.Entry\%25%25f\Plugins\$(AssemblyName)&quot;&#xD;&#xA;    if not exist &quot;!dir!&quot; md &quot;!dir!&quot;&#xD;&#xA;    copy &quot;$(TargetDir)*OpcDa*.dll&quot; &quot;!dir!&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;endlocal&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;" />
+		<Exec Command="@echo off&#xD;&#xA;setlocal enabledelayedexpansion&#xD;&#xA;&#xD;&#xA;set targetFWS=$(TargetFrameworks)&#xD;&#xA;for %25%25f in (%25targetFWS%25) do (&#xD;&#xA;    set &quot;dir=$(SolutionDir)ThingsGateway.Server\bin\$(Configuration)\%25%25f\Plugins\$(AssemblyName)&quot;&#xD;&#xA;    if not exist &quot;!dir!&quot; md &quot;!dir!&quot;&#xD;&#xA;    copy &quot;$(TargetDir)*OpcDa*.dll&quot; &quot;!dir!&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;endlocal&#xD;&#xA;&#xD;&#xA;" />
 	</Target>
 
 	<ItemGroup>
-	  <Content Remove="Locales\en-US.json" />
-	  <Content Remove="Locales\zh-CN.json" />
+		<Content Remove="Locales\*.json" />
+		<EmbeddedResource Include="Locales\*.json" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Locales\en-US.json" />
-	  <EmbeddedResource Include="Locales\zh-CN.json" />
+	  <Compile Remove="Pages\OpcDaImportVariable.razor.cs" />
+		<Content Remove="Pages\OpcDaImportVariable.razor" />
 	</ItemGroup>
-
 
 	<ItemGroup>
-
-		<ProjectReference Include="..\..\foundation\ThingsGateway.Foundation.OpcDa\src\ThingsGateway.Foundation.OpcDa.csproj" />
-
-		<ProjectReference Include="..\ThingsGateway.Foundation.OpcDa\ThingsGateway.Foundation.OpcDa.csproj" />
-
-
+		<ProjectReference Include="$(SolutionDir)\adapter\ThingsGateway.Foundation.OpcDa\ThingsGateway.Foundation.OpcDa.csproj" />
 	</ItemGroup>
-
 
 
 </Project>
