--- a/src/debugs/ThingsGateway.Debug.Rcl/menu.config.json
+++ b/src/debugs/ThingsGateway.Debug.Rcl/menu.config.json
@@ -20,7 +20,14 @@
     {
       "Url": "/Dlt645_2007Master",
       "Text": "Dlt645_2007Master"
+    },
+    {
+      "Url": "/OpcUaMaster",
+      "Text": "OpcUaMaster"
+    },
+    {
+      "Url": "/OpcDaMaster",
+      "Text": "OpcDaMaster"
     }
-
   ]
 }
