--- a/src/adapter/ThingsGateway.Plugin.Mqtt/ThingsGateway.Plugin.Mqtt.csproj
+++ b/src/adapter/ThingsGateway.Plugin.Mqtt/ThingsGateway.Plugin.Mqtt.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 	<Import Project="$(SolutionDir)Plugin.props" />
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
@@ -14,12 +14,5 @@
 	<PropertyGroup>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Content Remove="Locales\*.json" />
-		<EmbeddedResource Include="Locales\*.json" />
-	</ItemGroup>
-
-
 
 </Project>
