--- a/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
+++ b/src/ThingsGateway.NewLife.X/ThingsGateway.NewLife.X.csproj
@@ -1,24 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFrameworks>net462;netstandard2.0;netstandard2.1;net6.0;</TargetFrameworks>
-	</PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup Condition=" '$(TargetFramework)'=='net462' or '$(TargetFramework)'=='net6.0-windows'">
-		<DefineConstants>$(DefineConstants);__WIN__</DefineConstants>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net462;netstandard2.0;netstandard2.1;net6.0;</TargetFrameworks>
+  </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(TargetFramework)'=='net462' or '$(TargetFramework)'=='net6.0-windows'">
+    <DefineConstants>$(DefineConstants);__WIN__</DefineConstants>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<!--<PackageReference Include="System.Security.Cryptography.Cng" Version="5.0.0" />-->
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='net462' ">
-		<PackageReference Include="System.ValueTuple" Version="4.5.0" />
-		<Reference Include="Microsoft.VisualBasic" />
-		<Reference Include="System.Net.Http" />
-		<Reference Include="System.Web" />
-		<Reference Include="System.Management" />
-		<Reference Include="System.IO.Compression" />
-	</ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net462' ">
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.IO.Compression" />
+  </ItemGroup>
 </Project>
