--- a/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
+++ b/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
@@ -1,34 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
+  <ItemGroup>
+    <PackageReference Include="BootstrapBlazor" Version="8.4.7" />
+    <PackageReference Include="BootstrapBlazor.FontAwesome" Version="8.0.2" />
+  </ItemGroup>
 
-	
-<!--资源-->
-	<ItemGroup>
-		<Content Update="wwwroot\**">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+  <ItemGroup>
+    <ProjectReference Include="$(SolutionDir)\ThingsGateway.Core\ThingsGateway.Core.csproj" />
+  </ItemGroup>
 
-		<Content Remove="Locales\*.json" />
-		<EmbeddedResource Include="Locales\*.json" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="BootstrapBlazor" Version="8.4.7" />
-		<PackageReference Include="BootstrapBlazor.FontAwesome" Version="8.0.2" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <ProjectReference Include="$(SolutionDir)\ThingsGateway.Core\ThingsGateway.Core.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Content Update="wwwroot\css\site.css">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-	  </Content>
-	</ItemGroup>
-
+  <ItemGroup>
+    <Content Update="wwwroot\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
 
 
