--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -1,75 +1,67 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<Target Name="PostPublish" AfterTargets="Publish">
-		<Exec Command=" &#xD;&#xA;		set dir=&quot;bin\$(Configuration)\$(TargetFramework)\Plugins&quot;&#xD;&#xA; &#xD;&#xA;		if not exist %dir%  md %dir%  &#xD;&#xA;&#xD;&#xA;			set dir1=&quot;$(PublishDir)Plugins&quot;&#xD;&#xA; &#xD;&#xA;		if not exist %dir1%  md %dir1%  &#xD;&#xA;&#xD;&#xA;			xcopy %dir% %dir1% /E /H /C /K /Y  &#xD;&#xA;&#xD;&#xA;" />
+  <PropertyGroup>
+    <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
+    <SatelliteResourceLanguages>zh-Hans;en-US</SatelliteResourceLanguages>
+    <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
+    <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
 
-		<ItemGroup>
-			<PDBFilesToDelete Include="$(PublishDir)\*.pdb" />
-		</ItemGroup>
-		<Delete Files="@(PDBFilesToDelete)" />
-
-	</Target>
-
-	<PropertyGroup>
-		<OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
-		<SatelliteResourceLanguages>zh-Hans;en-US</SatelliteResourceLanguages>
-		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
-		<ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
-
-		<GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode><!--动态适用GC-->
-		<!--<UseWindowsThreadPool>false</UseWindowsThreadPool> --><!--使用自托管线程池-->
-		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
-		<!--<PlatformTarget>x86</PlatformTarget>-->
+    <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
+    <!--动态适用GC-->
+    <!--<UseWindowsThreadPool>false</UseWindowsThreadPool> -->
+    <!--使用自托管线程池-->
+    <!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
+    <!--<PlatformTarget>x86</PlatformTarget>-->
 
 
-	</PropertyGroup>
-	<PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Admin'">
-		<DefineConstants>Admin</DefineConstants>
-	</PropertyGroup>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Admin'">
+    <DefineConstants>Admin</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="$(SolutionDir)\ThingsGateway.Admin.Razor\ThingsGateway.Admin.Razor.csproj" />
+    <!--<ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.Application\ThingsGateway.Gateway.Application.csproj" />-->
+    <ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.Razor\ThingsGateway.Gateway.Razor.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 
-	<ItemGroup>
-		<ProjectReference Include="$(SolutionDir)\ThingsGateway.Admin.Razor\ThingsGateway.Admin.Razor.csproj" />
-		<!--<ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.Application\ThingsGateway.Gateway.Application.csproj" />-->
-		<ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.Razor\ThingsGateway.Gateway.Razor.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<Content Update="wwwroot\**">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-	
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-	</ItemGroup>
+  <!--安装服务守护-->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+  </ItemGroup>
 
-	<!--安装服务守护-->
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Update="Dockerfile">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="pm2-windows.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="pm2-linux.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="thingsgateway.service">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		
-		<None Update="WindowsServiceCreate.bat">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="WindowsServiceDelete.bat">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-	</ItemGroup>
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="pm2-windows.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="pm2-linux.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="thingsgateway.service">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="WindowsServiceCreate.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="WindowsServiceDelete.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
