--- a/src/adapter/ThingsGateway.Foundation.OpcDa/ThingsGateway.Foundation.OpcDa.csproj
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/ThingsGateway.Foundation.OpcDa.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
+  <Import Project="$(SolutionDir)PackNuget.props" />
+  <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0;net6.0;</TargetFrameworks>
     <Description>工业设备通讯协议-OpcDa协议</Description>
 		<DocumentationFile></DocumentationFile>
