--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+/src/*Pro*/
+/src/*Pro*
+/src/*pro*
+/src/*pro*/
+/doc/.*
