--- a/src/ThingsGateway.Admin.Razor/ThingsGateway.Admin.Razor.csproj
+++ b/src/ThingsGateway.Admin.Razor/ThingsGateway.Admin.Razor.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
 </Project>
+
 
 
