--- a/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
+++ b/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
@@ -26,5 +26,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
