--- a/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
+++ b/src/ThingsGateway.Razor/ThingsGateway.Razor.csproj
@@ -1,5 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
+
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="BootstrapBlazor" Version="8.4.7" />
     <PackageReference Include="BootstrapBlazor.FontAwesome" Version="8.0.2" />
