--- a/src/Foundation.props
+++ b/src/Foundation.props
@@ -2,7 +2,12 @@
   <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0;net6.0;</TargetFrameworks>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="$(SolutionDir)Foundation.props" Pack="true" PackagePath="\" />
   </ItemGroup>
