添加多语言资源

--- a/src/adapter/ThingsGateway.Foundation.OpcDa/ThingsGateway.Foundation.OpcDa.csproj
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/ThingsGateway.Foundation.OpcDa.csproj
@@ -8,6 +8,11 @@
 		<IncludeSymbols>false</IncludeSymbols>
 	</PropertyGroup>
 
-
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
