--- a/src/adapter/ThingsGateway.Foundation.OpcUa/ThingsGateway.Foundation.OpcUa.csproj
+++ b/src/adapter/ThingsGateway.Foundation.OpcUa/ThingsGateway.Foundation.OpcUa.csproj
@@ -8,7 +8,13 @@
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
-
+  <ItemGroup>
+    <Content Remove="Locales\*.json" />
+    <EmbeddedResource Include="Locales\*.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client" Version="1.5.374.36" />
